# slackstyler

./: LICENSE  README.md  pyproject.toml
slackstyler/: __init__.py  slackstyler.py
tests/: test_slackstyler.py
